tests/invalid/test_empty_file.tl
// Invalid Test: Empty file (no tasks defined)
